Fixed overlapping header text

--- a/styles/base.css
+++ b/styles/base.css
@@ -29,7 +29,7 @@ main {
 /* Text Styles */
 
 h1, h2, h3, h4 {
-  margin: 1.414em 0 0.5em;
+  margin: 1em 0 0.5em;
   font-family: 'Rakkas',  cursive;;
   font-weight: inherit;
   line-height: 1.2;
@@ -38,14 +38,14 @@ h1, h2, h3, h4 {
 
 h1 {
   margin-top: 0;
-  font-size: 2.441em;
+  font-size: 1.8em;
 }
 
-h2 {font-size: 1.953em;}
+h2 {font-size: 1.5em;}
 
-h3 {font-size: 1.563em;}
+h3 {font-size: 1.25em;}
 
-h4 {font-size: 1.25em;}
+h4 {font-size: 1em;}
 
 small, .font_small {font-size: 0.8em;}
 
@@ -74,7 +74,7 @@ a:visited {
   color: #630300;
 }
 
-@media only screen and (min-width: 740px) {
+@media only screen and (min-width: 770px) {
   body {
     background: #272c28 url("../img/headband_wide.jpg") no-repeat fixed center top;
     background-size: cover;
